--- a/.github/workflows/collect_data_monthly.yml
+++ b/.github/workflows/collect_data_monthly.yml
@@ -2,8 +2,8 @@ name: collect-data-monthly
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 2 * *' # “At 00:00 on day-of-month 2” (on the 2nd of the month)
+  #schedule:
+  #  - cron: '0 0 2 * *' # “At 00:00 on day-of-month 2” (on the 2nd of the month)
 
 jobs:
   build:
